src/assets/styles/home.css
.header {
  background-color: var(--central-ministry-colour);
  padding: 1rem 5rem;
  display: flex;
  justify-content: flex-start;
}

.logo-text {
  color: white;
  font-size: 1.5rem;
  text-decoration: none;
}

.logo-text.bottom {
  margin-top: -0.2rem;
  font-weight: 400;
}

.hero {
  background-color: var(--central-ministry-colour);
  color: white;
  padding: 1rem 5rem;
}

.hero-title {
  font-size: 5rem;
  line-height: 1.2;
}

.hero-text {
  margin-top: 2rem;
  font-size: 2rem;
  margin-bottom: 2rem;
}

.ministries {
  display: grid;
  grid-template-columns: 20vw 20vw 20vw 20vw;
  grid-template-rows: fit-content fit-content fit-content;
  place-content: center;
  padding: 0rem 5rem;
}

.ministries-title {
  grid-column: 1 / -1;
  grid-row: 1;
  font-size: 4rem;
  padding: 1rem;
  place-self: center;
}

.ministries a {
  background-color: white;
  place-self: center;
  height: 20vw;
  width: 20vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

a svg {
  height: 15vw;
  width: 15vw;
}

.ministries a:hover.central-ministry {
  border: 16px solid var(--central-ministry-colour);
}

.ministries a:hover.ministry-of-food {
  border: 16px solid var(--ministry-of-food-colour);
}

.ministries a:hover.ministry-of-foreign-affairs {
  border: 16px solid var(--ministry-of-foreign-affairs-colour);
}

.ministries a:hover.ministry-of-health {
  border: 16px solid var(--ministry-of-health-colour);
}

.ministries a:hover.ministry-of-finance {
  border: 16px solid var(--ministry-of-finance-colour);
}

.ministries a:hover.ministry-of-immigration {
  border: 16px solid var(--ministry-of-immigration-colour);
}

.ministries a:hover.ministry-of-technology {
  border: 16px solid var(--ministry-of-technology-colour);
}

.ministries a:hover.ministry-of-defence {
  border: 16px solid var(--ministry-of-defence-colour);
}

.info-and-news {
  padding: 0rem 5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.info-and-news div {
  flex-grow: 1;
  padding: 1rem 2rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.info-and-news .title {
  font-size: 3rem;
}

.info-and-news .text {
  font-size: 1.5rem;
}

.info-and-news .cta {
  width: fit-content;
  padding: 1rem 2rem;
  font-size: 2rem;
  font-family: var(--mona-sans);
  color: black;
  background-color: transparent;
  border: 16px solid var(--central-ministry-colour);
}

.info-and-news .cta:hover {
  background-color: var(--central-ministry-colour);
  color: white;
}

.logo-frame {
  height: 300px;
  overflow: hidden;
  position: relative;
}

.logo-lottie {
  transform: translateY(-25%);
}

footer {
  margin-top: 2rem;
  padding: 2rem 5rem 3rem 5rem;
  background-color: var(--central-ministry-colour);
  color: white;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: 2rem;
}

.footer-title {
  font-size: 2.5rem;
}

.footer-divider {
  width: 100%;
  height: 10px;
  background-color: white;
  margin-bottom: 1rem;
}

.footer-ministries.links {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: 1fr;
  row-gap: 0.5rem;
  column-gap: 1rem;
}

.footer-resources.links, .footer-about.links {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

footer .link {
  color: white;
  font-size: 1.2rem;
}

footer .link:hover {
  background-color: white;
  color: black;
}

